Update init script to add values for kirisakura

--- a/conf/init.cheetah.rc
+++ b/conf/init.cheetah.rc
@@ -18,6 +18,31 @@ on property:ro.boot.cdt_hwid=0x00030303000100000100000000000000
 on property:ro.boot.cdt_hwid=0x00030303000100000200000000000000
     setprop persist.vendor.nfc.config_file_name libnfc-hal-st-proto1.conf
 
+# Kirisakura
+write /proc/sys/net/ipv4/tcp_wmem "262144 524288 8388608"
+write /sys/kernel/mm/lru_gen/enabled y
+write /sys/kernel/mm/lru_gen/min_ttl_ms 5000
+write /proc/sys/vm/percpu_pagelist_high_fraction 96
+
+write /dev/blkio/background/blkio.ssg.max_available_ratio 25
+
+write /sys/devices/system/cpu/cpufreq/policy0/sched_pixel/lcpi_threshold 2
+write /sys/devices/system/cpu/cpufreq/policy0/sched_pixel/spc_threshold 44
+write /sys/devices/system/cpu/cpufreq/policy0/sched_pixel/limit_frequency 1197000
+
+write /sys/devices/system/cpu/cpufreq/policy4/sched_pixel/lcpi_threshold 4
+write /sys/devices/system/cpu/cpufreq/policy4/sched_pixel/spc_threshold 25
+write /sys/devices/system/cpu/cpufreq/policy4/sched_pixel/limit_frequency 1328000
+
+write /sys/devices/system/cpu/cpufreq/policy6/sched_pixel/lcpi_threshold 4
+write /sys/devices/system/cpu/cpufreq/policy6/sched_pixel/spc_threshold 20
+write /sys/devices/system/cpu/cpufreq/policy6/sched_pixel/limit_frequency 1426000
+
+write /proc/vendor_sched/pmu_poll_time 10
+write /sys/devices/system/cpu/cpufreq/policy0/sched_pixel/pmu_limit_enable 1
+write /sys/devices/system/cpu/cpufreq/policy4/sched_pixel/pmu_limit_enable 1
+write /sys/devices/system/cpu/cpufreq/policy6/sched_pixel/pmu_limit_enable 1
+
 # Display
 on property:graphics.display.kernel_idle_timer.enabled=true
     # Enable aggressive idle mode switching
